# pdf-extract-experiments

./: README.md  pyproject.toml
artifacts/GOOG-10-K-2025/20260624T193004Z/: run_manifest.json
artifacts/GOOG-10-K-2025/20260624T193004Z/text/: method_manifest.json
artifacts/GOOG-10-K-2025/20260624T193004Z/text/raw/: GOOG-10-K-2025.json  GOOG-10-K-2025.md
src/pdf_extract_experiments/: __init__.py  cli.py  config.py  evaluation.py  pipeline.py
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/: run_manifest.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/camelot_table/: method_manifest.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/camelot_table/evaluation/: judgments.json  summary.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/camelot_table/raw/: GOOG-10-K-2025.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/evaluation/: comparison.json  questions.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/ocr/: method_manifest.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/ocr/evaluation/: judgments.json  summary.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/pdfplumber_text/: method_manifest.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/pdfplumber_text/evaluation/: judgments.json  summary.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/pdfplumber_text/raw/: GOOG-10-K-2025.md
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/pymupdf_text/: method_manifest.json
tmp-eval-artifacts/GOOG-10-K-2025/20260624T210016Z/text/: method_manifest.json  normalized.json
(+5 files in other folders)
